# tiny-player

./: .gitignore  Cargo.toml  LICENSE  build.rs
docs/superpowers/plans/: 2026-04-20-gpui-libmpv2-player.md  2026-04-21-gpui-player-navigation-progress.md  2026-04-21-gpui-player-overlay-progress.md  2026-04-23-gpui-player-wayland-video-performance.md
docs/superpowers/specs/: 2026-04-20-gpui-libmpv2-player-design.md  2026-04-21-gpui-player-navigation-progress-design.md  2026-04-21-gpui-player-overlay-progress-design.md  2026-05-25-mpv-read-ahead-cache-design.md  (+2 more)
src/: add_server_dialog.rs  app.rs  assets.rs  emby.rs  home.rs  image_cache.rs  image_loader.rs  images.rs  lib.rs  logging.rs  main.rs  media.rs  mpv_backend.rs  player.rs  player_app.rs  render_host.rs  server.rs  state.rs  storage.rs  text_input.rs  theme.rs  titlebar.rs  ui.rs  video_presenter.rs
src/app/: auth.rs  cache_save.rs  dialogs.rs  item_counts.rs  render.rs  resize.rs  server_cache.rs  server_card.rs  window.rs
src/emby/: image.rs  item.rs  playback.rs  show.rs  system.rs  user.rs
src/home/: cache.rs  carousel.rs  components.rs  data.rs  detail.rs  favorites.rs  library.rs  navigation.rs  paged_items.rs  playback.rs  render.rs  resume_actions.rs  search.rs  sidebar.rs  workspace_render.rs
src/images/: loader.rs
src/player/: backend.rs  dovi.rs  ffmpeg_backend.rs  ffmpeg_dovi.rs  ffmpeg_vulkan.rs  libplacebo.rs  page.rs  profile.rs  render_host.rs  tracks.rs  video_presenter.rs
src/ui/: add_server_dialog.rs  scrollbar.rs  text_input.rs  titlebar.rs  tooltip.rs
tests/: state.rs
themes/: catppuccin.json
(+198 files in other folders)
