[package]
name = "tiny"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
directories = "5"
dolby_vision = { git = "https://github.com/quietvoid/dovi_tool", package = "dolby_vision" }
gpui = "0.2.2"
gstreamer = { version = "0.25", features = ["v1_24"] }
gstreamer-app = "0.25"
gstreamer-video = { version = "0.25", features = ["v1_24"] }
image = "0.25"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-segmentation = "1.12"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.13"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
